# esp32-experiments

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
no_std/: Cargo.toml
no_std/.cargo/: config.toml
no_std/src/: main.rs
src/: main.rs
std/: Cargo.toml  sdkconfig.defaults
std/src/: main.rs
