[package]
edition = "2021"
name    = "no_std"
version = "0.1.0"

# Fix for `cargo check --tests` and `cargo clippy --tests` in no_std
[[bin]]
name = "no_std"
harness = false

[dependencies]
embassy-executor = { version = "0.7.0", features = ["executor-thread", "log"] }
embassy-futures = { version = "0.1.1", features = ["log"] }
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-usb = { version = "0.4.0", features = ["log"] }
embassy-usb-synopsys-otg = { version = "0.2.0", features = ["log"] }
esp-hal = { version = "0.23.1", features = ["esp32s2", "log", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s2", "log"] }
esp-println = { version = "0.13.1", default-features = false, features = ["colors", "esp32s2", "log", "uart"] }
log = "0.4.26"
usbd-hid = "0.8.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
