[package]
edition = "2021"
name    = "no_std"
version = "0.1.0"

[dependencies]
critical-section = "1.2.0"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32s2",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s2", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s2", "log"] }
log = { version = "0.4.21" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
